# OfferManagement-App

./: CMakeLists.txt  README.md  main.cpp  offers.txt
headers/: FileRepository.h  GUI.h  Wishlist.h  WishlistGui.h  actUndo.h  console.h  dynamicvector.h  observer.h  offer.h  repository.h  service.h  tests.h  validator.h  vector.h
sources/: FileRepository.cpp  GUI.cpp  Wishlist.cpp  WishlistGui.cpp  actUndo.cpp  console.cpp  dynamicvector.cpp  offer.cpp  repository.cpp  service.cpp  tests.cpp  validator.cpp  vector.cpp
